# video_key_frame_extraction

./: .gitignore  CMakeLists.txt  LICENSE  README.md  key_frame_extraction.cpp  test.cpp
